# Genesis4_CUDA_port

./: .gitignore  CMakeLists.txt  README.md
include/: Beam.h  BeamSolverCUDA.h  ControlCUDA.h  DiagnosticCUDA.h  Field.h  FieldSolverADICUDA.h  FieldSolverFFTCUDA.h  Gencore.h  Genesis4BeamSoA.h  Genesis4CudaBuffer.h  Genesis4CudaLaunch.h  Genesis4CudaRuntime.h  Genesis4FieldSoA.h  Track.h  TrackBeamCUDA.h
src/Core/: Beam.cpp  BeamSolverCUDA.cpp  ControlCUDA.cpp  DiagnosticCUDA.cpp  Field.cpp  FieldSolverADICUDA.cpp  FieldSolverFFTCUDA.cpp  Gencore.cpp  TrackBeamCUDA.cpp
src/Main/: Track.cpp
test/: fel.in  fel.lat  run.sh
